Example_Manifest_Files/Nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-on-ssd
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    disktype: ssd
