Example_Manifest_Files/Pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: network
  labels:
    app: pod-a
spec:
  containers:
  - name: httpd
    image: httpd
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-a
  namespace: network
spec:
  selector:
    app: pod-a
  ports:
    - port: 80
      targetPort: 80
