Example_Manifest_Files/vpa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpa-demo
  template:
    metadata:
      labels:
        app: vpa-demo
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: vpa-demo
spec:
  selector:
    app: vpa-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
